--- a/22_AppDomain/22_AppDomain.csproj
+++ b/22_AppDomain/22_AppDomain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EC53AB1A-0208-4FCE-B3A0-A3448159DF74}</ProjectGuid>
+    <ProjectGuid>{4EA3BECD-56A2-4E2E-A369-9C462777E5E7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_21_GC</RootNamespace>
-    <AssemblyName>21_GC</AssemblyName>
+    <RootNamespace>_22_AppDomain</RootNamespace>
+    <AssemblyName>22_AppDomain</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,12 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConditionalWeakTableDemo.cs" />
-    <Compile Include="M_Fixed.cs" />
-    <Compile Include="M_HandleCoolector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SafeHandle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
