--- a/24_Serialization/24_Serialization.csproj
+++ b/24_Serialization/24_Serialization.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2F9A94E1-051A-4F77-855C-C91E84B7305A}</ProjectGuid>
+    <ProjectGuid>{C3E340E5-EA0D-4533-8758-7329AFC1AD33}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_23_Reflection</RootNamespace>
-    <AssemblyName>23_Reflection</AssemblyName>
+    <RootNamespace>_24_Serialization</RootNamespace>
+    <AssemblyName>24_Serialization</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,13 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FindSomeType.cs" />
-    <Compile Include="Host_Exe.cs" />
-    <Compile Include="IAddIn.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="QuickStart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SomeType.cs" />
-    <Compile Include="UseRuntimeHandle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
